[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spnsa-feed-selection"
version = "0.1.0"
description = "Feed selection strategies and motif-based seeding for SPNSA investigative subgraph extraction."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Doniyor Koshimbetov"},
]
dependencies = [
  "networkx>=3.0",
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "tqdm>=4.66",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
